# DiscreteLogicEvaluator

./: CMakeLists.txt  README.md  main.cpp
analyze/: CMakeLists.txt  analyzer.cpp  analyzer.h
execution/: executor.h
parser/: CMakeLists.txt  ast.cpp  ast.h  lex.l  parser_def.h  yacc.y
